<resources>
    <string name="app_name">IL_Farm_to_CIty</string>
    <string name="main_name">Farm to City</string>
    <string name="signup_main">Don\'t have an account?</string>
    <string name="sign_up_btn">Sign up!</string>
    <string name="what_are_you">What are you?</string>
    <string name="producer">Producer</string>
    <string name="consumer">Consumer</string>
    <string name="producer_sign_up">producer sign up</string>
    <string name="consumer_sign_up">consumer sign up</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
</resources>